--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
             <div class="container">
                 <h1 class="visually-hidden">Портфоліо</h1>
                 <ul class="menu-button list">
-                    <li><button class="menu-button-item" type="button">Усі</button></li>
+                    <li><button class="menu-button-item active" type="button">Усі</button></li>
                     <li><button class="menu-button-item" type="button">Веб-сайти</button></li>
                     <li><button class="menu-button-item" type="button">Додатки</button></li>
                     <li><button class="menu-button-item" type="button">Дизайн</button></li>
